# macrosim

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  configure~  requirements.txt
apps/final/bfs/real/128/: recv_dist.csv  recv_ins.csv  send_dist.json
apps/final/bfs/real/256/: recv_dist.csv  send_dist.json  send_mem.csv
apps/final/bfs/real/512/: recv_dist.csv  send_dist.json
apps/final/bfs/real/64/: recv_dist.csv  send_dist.json
apps/final/bfs/scaled/1024/: recv_dist.csv  send_dist.json  size_dist.csv
apps/final/bfs/scaled/128/: recv_dist.csv  send_dist.json  send_ins.csv
apps/final/bfs/scaled/256/: recv_dist.csv  recv_mem.csv  send_dist.json
apps/final/bfs/scaled/512/: recv_dist.csv  send_dist.json
apps/final/jaccard/real/1024/: recv_dist.csv  recv_mem.csv  send_dist.json
apps/final/jaccard/real/128/: recv_dist.csv  send_dist.json
apps/final/jaccard/real/256/: recv_dist.csv  recv_ins.csv  send_dist.json
apps/final/jaccard/real/512/: recv_dist.csv  send_dist.json  send_mem.csv
apps/final/jaccard/real/64/: recv_dist.csv  send_dist.json  send_ins.csv  size_dist.csv
apps/final/jaccard/scaled/1024/: recv_dist.csv  send_dist.json
apps/final/jaccard/scaled/2048/: recv_dist.csv  send_dist.json
apps/final/jaccard/scaled/256/: recv_dist.csv  send_dist.json
apps/final/jaccard/scaled/512/: recv_dist.csv  send_dist.json
apps/final/tc/real/1024/: recv_dist.csv  send_dist.json  send_ins.csv
apps/final/tc/real/128/: recv_dist.csv  send_dist.json
apps/final/tc/real/2048/: recv_dist.csv  send_dist.json
apps/final/tc/real/256/: recv_dist.csv  send_dist.json
apps/final/tc/real/512/: recv_dist.csv  send_dist.json
apps/final/tc/real/64/: recv_dist.csv  send_dist.json
apps/final/tc/scaled/1024/: recv_dist.csv  send_dist.json
apps/final/tc/scaled/128/: send_dist.json
apps/final/tc/scaled/2048/: recv_dist.csv  recv_ins.csv  send_dist.json  send_mem.csv
apps/final/tc/scaled/256/: send_dist.json
apps/final/tc/scaled/512/: recv_dist.csv  recv_mem.csv  send_dist.json
apps/final/tc/scaled/64/: recv_dist.csv  size_dist.csv
config/: .gitignore  sst-check_picky.m4
src/: sst_forzasim_macro_config.h.in~
src/sst/: Makefile.am
src/sst/forzasim_macro/: Generator.h  Makefile.am  Precinct.cc  Precinct.h  ZAP.cc  ZAP.h  ZAP_PE.cc  ZAP_PE.h  ZAP_memctrl_simple.cc  ZAP_memctrl_simple.h  Zone.cc  Zone.h  discrete_shared.h
test-scripts/: macrosim-FatTree-ZAP.py  run_aggr_exp.py  run_bfs.sh  run_jaccard.sh  run_tc.sh
utils/: collect_aggr_data.py  get_proc_msg.py  get_stall_cycles.py  plot_aggr_graph.py
