# -*- Makefile -*-
#
#

ACLOCAL_AMFLAGS = -I config

SUBDIRS = \
	src

install-exec-hook:
	$(SST_REGISTER_TOOL) SST_FORZASIM_MACRO_LIBRARY SST_FORZASIM_MACRO_LIBRARY_SOURCE_ROOT=$(abs_srcdir)
	$(SST_REGISTER_TOOL) SST_FORZASIM_MACRO_LIBRARY SST_FORZASIM_MACRO_LIBRARY_HOME=$(prefix)
	$(SST_REGISTER_TOOL) SST_FORZASIM_MACRO_LIBRARY SST_FORZASIM_MACRO_LIBRARY_BINDIR=$(prefix)/bin
	$(SST_REGISTER_TOOL) SST_FORZASIM_MACRO_LIBRARY SST_FORZASIM_MACRO_LIBRARY_LIBDIR=$(pkglibdir)
	$(SST_REGISTER_TOOL) SST_FORZASIM_MACRO_LIBRARY SST_FORZASIM_MACRO_LIBRARY_BUILDDIR=$(abs_top_builddir)

EXTRA_DIST = \
	config \
	autogen.sh \
	CONTRIBUTING.md \
	CONTRIBUTORS.TXT \
	INSTALL \
	ISSUES \
	LICENSE \
	PLATFORMS \
	README.md \
	VERSION
